--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
     "dependencies": {
-      "console.table": "^0.10.0",
-      "inquirer": "^7.3.3",
-      "mysql": "^2.18.1",
-      "util": "^0.12.3"
+        "console.table": "^0.10.0",
+        "dotenv": "^16.0.0",
+        "inquirer": "^7.3.3",
+        "mysql": "^2.18.1",
+        "mysql2": "^2.3.3",
+        "sequelize": "^6.19.0",
+        "util": "^0.12.3"
     }
-  }
+}
